clusters/vollminlab-cluster/kyverno/kyverno/app/policies/block-privileged.yaml
# Block privileged pods
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-privileged
terms: []
spec:
  validationFailureAction: enforce
  rules:
    - name: block-privileged
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - DaemonSet
      validate:
        message: "Privileged mode is not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
