clusters/vollminlab-cluster/kyverno/kyverno/app/policies/disallow-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-hostpath-usage
  annotations:
    policies.kyverno.io/title: Restrict hostPath Usage
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
terms: []
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: disallow-hostpath-except-system
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - calico-system
            - longhorn-system
            - monitoring
            - tigera-operator
      validate:
        message: "Using hostPath volumes is not allowed outside system namespaces."
        pattern:
          spec:
            volumes:
              - =(hostPath): null
