clusters/vollminlab-cluster/kyverno/kyverno/app/policies/require-labels.yaml
# Require labels
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-standard-labels
terms: []
spec:
  validationFailureAction: enforce
  rules:
    - name: require-labels
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - Namespace
      validate:
        message: "Required labels: app, env, team"
        pattern:
          metadata:
            labels:
              app: "?*"
              env: "?*"
              team: "?*"
